# perpetual-rag

./: .gitignore  index.html
paper_KnowledgeBase/: ILT2026_投稿版_中文_v1.docx  ILT2026_投稿版_英文_v2.docx  sessionhandoff.md  版本修正紀錄_2026-04-22.md  論文IEEE格式稿.md  論文_IEEE_Overleaf.tex  論文_Word初審版.docx  論文正式稿.md
paper_KnowledgeBase/.archive/code/starter_kit/: CHANGELOG.md  README.md  README_pip.md  SETUP.md  index.html  install.sh  pyproject.toml  setup_cloud.sh  setup_usb.sh  sync_pull.sh  sync_push.sh
paper_KnowledgeBase/.archive/code/starter_kit/perpetual_rag/: __init__.py  cli.py
paper_KnowledgeBase/.archive/code/starter_kit/perpetual_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paper_KnowledgeBase/.archive/code/starter_kit/scripts/: bm25_search.py  build_release.py  bump_version.py
paper_KnowledgeBase/.archive/code/starter_kit/知識庫範本/: CLAUDE.md  index.md  sessionhandoff.md
paper_KnowledgeBase/arXiv/: ILT2026_ZH_arXiv.tex
paper_KnowledgeBase/benchmark/: .gitignore  CHANGELOG.md  LICENSE  Makefile  run_all.sh
paper_KnowledgeBase/benchmark/data/: corpus.json  evaluation_results.json  final_report.md
paper_KnowledgeBase/benchmark/docs/: manual_verification.md  protocol.md
paper_KnowledgeBase/benchmark/scripts/: 0b_pattern_expand.py  10_rerank_eval.py  2_annotate.py  4_evaluate.py  6_import_cmteb_ecom.py  7_plot.py  8_bge_eval.py  (+2 more)
paper_KnowledgeBase/scripts/: consistency_check.py
paper_KnowledgeBase/starter_kit/: CHANGELOG.md  CONTRIBUTORS_LOG.md  README.md  README_pip.md  SETUP.md  install.sh  pyproject.toml
(+28 files in other folders)
